<resources>
    <string name="app_name">MoboSplash</string>
  <!--  <string name="banner_app_id">ca-app-pub-5001555525411212~9724165449</string>
    <string name="banner_ad_id">ca-app-pub-5001555525411212/5784920435</string>-->

    <!--<string name="admob_app_id">ca-app-pub-1033682613036596~2613269091</string>-->
    <string name="banner_ad_id">ca-app-pub-7460856719889795/6025278102</string>
    <string name="intertatial_ad_id">ca-app-pub-7770856719889795/9681436162</string>

    <string name="skip">Skip</string>
    <string name="we_help_you_to_find_free_opensource_photos">We help you to find\nfree opensource photos</string>
    <string name="login">Login</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="don_t_have_an_account_join">Don\'t have an account?</string>
    <string name="join">Join</string>
    <string name="full_name">Full Name</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="oldpassword">Old Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="new_password">New Password</string>
    <string name="register">Register</string>
    <string name="do_you_have_an_account">Do you have an account?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="username_or_email">Username or email</string>
    <string name="please_wait">Please wait</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="home">Home</string>
    <string name="explore">Explore</string>
    <string name="favourite">Favourite</string>
    <string name="profile">Profile</string>
    <string name="app_backpress">Press again to exit</string>
    <string name="cancel">Cancel</string>
    <string name="logout">Logout</string>
    <string name="ok">OK</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_high_resolution_photos">Search High-Resolution photos</string>
    <string name="newtext">New</string>
    <string name="trending">Trending</string>
    <string name="action_update">Update</string>
    <string name="errfnameRequired">First Name Required</string>
    <string name="errUsernameRequired">Username Required</string>
    <string name="errLocationRequired">Location Required</string>
    <string name="errEmailRequired">Email Id Required</string>
    <string name="errEmailInvalid">Invalid Email Id</string>
    <string name="errConPasswordRange">Confirm Password length enter minimum 6 characters</string>
    <string name="errPasswordRange">Password length enter minimum 6 characters</string>
    <string name="errPasswordRequired">Password Required</string>
    <string name="errConfirmPasswordRequired">Confirm Password Required</string>
    <string name="errConfirmPasswordMismatch">Confirm Password does not match</string>
    <string name="related">Related</string>
    <string name="download">Download</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="poetfolio">Portfolio</string>
    <string name="location">Location</string>
    <string name="submit">Submit</string>
    <string name="facebook_app_id">475979603214826</string>
    <string name="fb_login_protocol_scheme">fb475979603214817</string>
    <string name="email_not_found">Email not found</string>
    <string name="change_password">Change Password</string>
    <string name="no_record_found">No record found</string>
</resources>
