<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="wallsplash.ankitray.com.registration.RegisterActivity">
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:orientation="vertical">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:background="@drawable/reg_background"
           />
            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/cvCancel"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_gravity="bottom|center"
                card_view:cardBackgroundColor="@color/colorWhite"
                card_view:cardCornerRadius="@dimen/m25dp"
                card_view:cardUseCompatPadding="false">
            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_gravity="center"
                android:src="@drawable/cancel"/>
            </android.support.v7.widget.CardView>
            <TextView
                android:id="@+id/tvSkip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:layout_gravity="right"
                android:layout_marginTop="35dp"
                android:layout_marginRight="@dimen/m20dp"
                android:paddingTop="@dimen/m10dp"
                android:paddingBottom="@dimen/m10dp"
                android:paddingLeft="@dimen/m30dp"
                android:paddingRight="@dimen/m30dp"
                android:background="@drawable/bg_roundcorner_whiteborder"
                android:textColor="@color/colorWhite"
                android:text="@string/skip"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginBottom="@dimen/m30dp"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_gravity="center"
                    android:src="@drawable/logo_white"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorWhite"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/m10dp"
                    android:layout_gravity="center"
                    android:textSize="@dimen/m20dp"
                    android:textStyle="bold"
                    android:text="@string/we_help_you_to_find_free_opensource_photos"/>

            </LinearLayout>
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_marginTop="@dimen/m20dp"
        android:orientation="vertical">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_profile"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_80sdp"
            android:layout_marginBottom="@dimen/m20dp"
            android:autofillHints="@string/app_name"
            android:layout_gravity="center"
            android:src="@drawable/edtprofile"/>

        <EditText
            android:id="@+id/edtFname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:imeOptions="actionNext"
            android:inputType="textCapSentences"
            android:textSize="@dimen/primaryText"
            android:layout_marginTop="@dimen/m10dp"
            android:layout_marginBottom="@dimen/m10dp"
            android:paddingTop="@dimen/m10dp"
            android:paddingBottom="@dimen/m10dp"
            android:paddingLeft="@dimen/m30dp"
            android:paddingRight="@dimen/m10dp"
            android:hint="@string/full_name"
            android:background="@drawable/bg_edt"/>
        <EditText
            android:id="@+id/edtUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:textSize="@dimen/primaryText"
            android:inputType="textCapSentences"
            android:textColor="@color/colorBlack"
            android:layout_marginTop="@dimen/m10dp"
            android:layout_marginBottom="@dimen/m10dp"
            android:paddingTop="@dimen/m10dp"
            android:paddingBottom="@dimen/m10dp"
            android:paddingLeft="@dimen/m30dp"
            android:paddingRight="@dimen/m10dp"
            android:hint="@string/username"
            android:background="@drawable/bg_edt"/>
        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/primaryText"
            android:textColor="@color/colorBlack"
            android:layout_marginTop="@dimen/m10dp"
            android:layout_marginBottom="@dimen/m10dp"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:paddingTop="@dimen/m10dp"
            android:paddingBottom="@dimen/m10dp"
            android:paddingLeft="@dimen/m30dp"
            android:paddingRight="@dimen/m10dp"
            android:hint="@string/email"
            android:background="@drawable/bg_edt"/>
        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/primaryText"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:textColor="@color/colorBlack"
            android:layout_marginTop="@dimen/m10dp"
            android:layout_marginBottom="@dimen/m10dp"
            android:paddingTop="@dimen/m10dp"
            android:paddingBottom="@dimen/m10dp"
            android:paddingLeft="@dimen/m30dp"
            android:paddingRight="@dimen/m10dp"
            android:hint="@string/password"
            android:background="@drawable/bg_edt"/>
        <EditText
            android:id="@+id/edtConPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/primaryText"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:textColor="@color/colorBlack"
            android:layout_marginTop="@dimen/m10dp"
            android:layout_marginBottom="@dimen/m10dp"
            android:paddingTop="@dimen/m10dp"
            android:paddingBottom="@dimen/m10dp"
            android:paddingLeft="@dimen/m30dp"
            android:paddingRight="@dimen/m10dp"
            android:hint="@string/confirm_password"
            android:background="@drawable/bg_edt"/>
        <TextView
            android:id="@+id/tvRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="@dimen/m10dp"
            android:layout_marginBottom="@dimen/m10dp"
            android:textStyle="bold"
            android:gravity="center"
            android:paddingTop="@dimen/m15dp"
            android:paddingBottom="@dimen/m15dp"
            android:background="@drawable/bg_reg_btn"
            android:textSize="@dimen/primaryText"
            android:text="@string/register"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/m30dp"
            android:layout_marginBottom="35dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorEditHintText"
                android:gravity="center"
                android:paddingTop="@dimen/m10dp"
                android:paddingBottom="@dimen/m10dp"
                android:textSize="@dimen/primaryText"
                android:text="@string/do_you_have_an_account"/>
            <TextView
                android:id="@+id/tvLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:gravity="center"
                android:textStyle="bold"
                android:layout_marginLeft="@dimen/m5dp"
                android:paddingTop="@dimen/m10dp"
                android:paddingBottom="@dimen/m10dp"
                android:textSize="@dimen/primaryText"
                android:text="@string/login"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>