<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context="wallsplash.ankitray.com.StratupActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:layout_marginTop="35dp"
        android:layout_marginRight="@dimen/m20dp">
        <TextView
            android:id="@+id/tvSkip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:paddingTop="@dimen/m10dp"
            android:paddingBottom="@dimen/m10dp"
            android:paddingLeft="@dimen/m30dp"
            android:paddingRight="@dimen/m30dp"
            android:background="@drawable/bg_roundcorner_whiteborder"
            android:textColor="@color/colorWhite"
            android:text="@string/skip"/>
    </LinearLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_50sdp"
                android:layout_gravity="center"
                android:src="@drawable/logo_white"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:gravity="center"
                android:layout_marginTop="@dimen/m10dp"
                android:layout_gravity="center"
                android:textSize="@dimen/m20dp"
                android:textStyle="bold"
                android:text="@string/we_help_you_to_find_free_opensource_photos"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_40sdp"
            android:layout_marginLeft="@dimen/m20dp"
            android:layout_marginRight="@dimen/m20dp"
            android:gravity="bottom|end"
            android:layout_gravity="bottom|end"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tvLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:gravity="center"
                android:paddingTop="@dimen/m15dp"
                android:paddingBottom="@dimen/m15dp"
                android:textStyle="bold"
                android:background="@drawable/bg_login"
                android:textSize="@dimen/primaryText"
                android:text="@string/login"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:paddingTop="@dimen/m15dp"
                android:paddingBottom="@dimen/m15dp"
                android:background="@drawable/bg_fblogin"
                android:gravity="center"
                android:orientation="vertical">
            <TextView
                android:id="@+id/tvFbLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/colorWhite"
                android:drawableLeft="@drawable/ic_facebook"
                android:drawablePadding="@dimen/m10dp"
                android:textSize="@dimen/primaryText"
                android:text="@string/login_with_facebook"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_30sdp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorWhite"
                    android:gravity="center"
                    android:paddingTop="@dimen/m10dp"
                    android:paddingBottom="@dimen/m10dp"
                    android:textSize="@dimen/primaryText"
                    android:text="@string/don_t_have_an_account_join"/>
                <TextView
                    android:id="@+id/tvJoin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorWhite"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:layout_marginLeft="@dimen/m5dp"
                    android:paddingTop="@dimen/m10dp"
                    android:paddingBottom="@dimen/m10dp"
                    android:textSize="@dimen/primaryText"
                    android:text="@string/join"/>
            </LinearLayout>

        </LinearLayout>
    </FrameLayout>

</FrameLayout>